<resources>
    <string name="app_name" translatable="false">GPS offline tracker</string>
    <string name="title_home">Home</string>
    <string name="title_tracks">Tracks</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_map">Map</string>
    <string name="get_coordinates_button_text">Get coords</string>
    <string name="latitude_label">Lat: %1$.6f</string>
    <string name="longitude_label">Lon: %1$.6f</string>
    <string name="accuracy_label">Acc: %1$.2f m</string>
    <string name="start_recording_string">Start Recording</string>
    <string name="end_recording">End Recording</string>
    <string name="channel_name" translatable="false">com.filipnowakdev.gps_offline_tracker.notifications</string>
    <string name="channel_description" translatable="false">Offline gps tracker notification channel</string>
    <string name="title_activity_tracks">Tracks</string>
    <string name="speed_label_mps">Speed: %1$.2f m/s</string>
    <string name="track_details">Details</string>
    <string name="track_map">Show on map</string>
    <string name="track_delete">Delete</string>
    <string name="title_on_map">%1$s on map</string>


    <string name="distance">Distance</string>
    <string name="duration">Duration</string>
    <string name="avg_speed">Avg. speed</string>

    <string name="kilometers" translatable="false">%1$.2f km</string>
    <string name="meters" translatable="false">%1$.2f m</string>
    <string name="meters_per_second" translatable="false">%1$.2f m/s</string>
    <string name="kilometers_per_hour" translatable="false">%1$.2f km/h</string>
    <string name="duration_field" translatable="false">%1$02d:%2$02d:%3$02d</string>
    <string name="max_speed">Max speed</string>
    <string name="avg_move_speed">Avg. movement speed</string>
    <string name="title_track_details">%1$s details</string>
    <string name="toolbar_settings">Settings</string>

    <string name="gps_category">GPS settings</string>
    <string name="gps_min_distance">Minimum GPS distance (meters)</string>
    <string name="gps_min_interval">Minimum GPS interval (seconds)</string>
    <string name="meters_per_second_unit" translatable="false">m/s</string>
    <string name="kilometers_per_hour_unit" translatable="false">km/h</string>
    <string name="units_category">Units</string>
    <string name="speed">Speed</string>
    <string name="speed_label_kph">Speed: %1$.2f km/h</string>
    <string name="lat_placeholder">Lat: …</string>
    <string name="lon_placeholder">Lon: …</string>
    <string name="acc_placeholder">Acc: …</string>
    <string name="speed_placeholder">Speed: …</string>
    <string name="openstreetmap_contributors" translatable="false">© OpenStreetMap contributors</string>
    <string name="toggle_location_following">Toggle location following</string>
    <string name="no_trackpoints_string">Track has no trackpoints.</string>
    <string name="ok_string">OK</string>
    <string name="track_name_string">Track name:</string>
    <string name="cancel_string">Cancel</string>
    <string name="delete_confirm_header_string">Are you sure you want to delete this track?</string>
    <string name="marker_title_string">You are here.</string>
    <string name="track_plot">Plot</string>

    <string name="time">Time</string>
    <string name="bpm" translatable="false">BPM</string>
    <string name="x_axis_value">X axis value</string>
    <string name="y_axis_value">Y axis value</string>
    <string name="sensors_label">Sensors</string>
    <string name="sensors_pairing">Pair sensor</string>
    <string name="save">Save</string>
    <string name="saved_sensors">Saved sensors</string>
    <string name="sensor_already_saved">Sensor already saved</string>
    <string name="sansor_saved">Sensor saved</string>
    <string name="default_label">Default:</string>
</resources>
