<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:key="gps_category"
        app:title="@string/gps_category">
        <SeekBarPreference
            android:max="100"
            app:defaultValue="10"
            app:key="gps_min_distance"
            app:showSeekBarValue="true"
            app:title="@string/gps_min_distance" />
        <SeekBarPreference
            android:max="60"
            app:defaultValue="5"
            app:key="gps_min_interval"
            app:showSeekBarValue="true"
            app:title="@string/gps_min_interval" />

    </PreferenceCategory>

    <PreferenceCategory
        app:key="units_category"
        app:title="@string/units_category">
        <ListPreference
            android:defaultValue="@string/kilometers_per_hour"
            app:entries="@array/units_speed_entries"
            app:entryValues="@array/units_speed_entry_values"
            app:key="unit_speed"
            app:title="@string/speed"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory
        app:key="plot_category"
        app:title="@string/track_plot">
        <ListPreference
            android:defaultValue="distance"
            app:entries="@array/plot_x_axis_labels"
            app:entryValues="@array/plot_x_axis_values"
            app:key="plot_x_axis"
            app:title="@string/x_axis_value"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            android:defaultValue="speed"
            app:entries="@array/plot_y_axis_labels"
            app:entryValues="@array/plot_y_axis_values"
            app:key="plot_y_axis"
            app:title="@string/y_axis_value"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory
        app:key="sensors_category"
        app:title="@string/sensors_label">
        <CheckBoxPreference
            app:key="use_bpm_sensor"
            app:title="Use BPM sensor"
            app:defaultValue="false"/>

        <Preference
            app:key="sensors_pair"
            app:title="@string/sensors_pairing" />

        <Preference
            app:key="saved_sensors"
            app:title="@string/saved_sensors" />
    </PreferenceCategory>


</androidx.preference.PreferenceScreen>
